--- a/layout/layout-module/sign-up.css
+++ b/layout/layout-module/sign-up.css
@@ -1,7 +1,16 @@
+*{
+    box-sizing: border-box;
+}
 body{
     background: url("http://cdn.wallpapersafari.com/38/53/HaGBxY.jpg");
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: 'Bree Serif', serif;
+}
+.container{
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 header h1{
@@ -18,30 +27,33 @@ header h1{
 header a{
     text-decoration: none;
 }
-#sign-up{
+
+#container_demo {
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    margin: 0 auto;
+    font-family: 'Bree Serif', serif;
+}
+#wrapper{
+    width: 60%;
+    right: 0px;
+    min-height: 560px;
+    margin: 0px auto;
+    width: 500px;
     position: relative;
-    top: 0px;
-    width: 30%;
-    max-width: 1000px;
-    min-width: 100px;
-    padding: 18px 4% 60px 4%;
-    margin: 0 0 35px 680px;
-    background: rgb(247, 247, 247);
-    border: 1px solid rgba(147, 184, 189,0.8);
-    box-shadow:
-            0pt 2px 5px rgba(105, 108, 109,  0.7),
-            0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
-    border-radius: 5px;
-    display: block;
+}
+#wrapper a{
+    color: rgb(95, 155, 198);
+    text-decoration: underline;
 }
 #wrapper h1{
     font-size: 48px;
     color: rgb(6, 106, 117);
     padding: 2px 0 30px 0;
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Bree Serif', serif;
     font-weight: bold;
     text-align: center;
-
 }
 #wrapper h1{
     background:
@@ -54,6 +66,7 @@ header a{
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
 #wrapper h1:after{
     content:' ';
     display:block;
@@ -61,7 +74,7 @@ header a{
     height:2px;
     margin-top:10px;
     background:
-           -webkit-linear-gradient(left,
+            -webkit-linear-gradient(left,
             rgba(147,184,189,0) 0%,
             rgba(147,184,189,0.8) 20%,
             rgba(147,184,189,1) 53%,
@@ -77,36 +90,94 @@ textarea:-moz-placeholder{
     color: rgb(190, 188, 188);
     font-style: italic;
 }
-input {
-    outline: none;
+#wrapper p{
+    margin-bottom:15px;
 }
+#wrapper p:first-child{
+    margin: 0px;
+}
+#wrapper label{
+    color: rgb(64, 92, 96);
+    position: relative;
+}
+
+#sign-up{
+    position: absolute;
+    top: 0px;
+    width: 99%;
+    padding: 10px 6% 60px 6%;
+    margin: 0 0 35px 50%;
+    background: rgb(247, 247, 247);
+    border: 1px solid rgba(147, 184, 189,0.8);
+    -webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    -moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    -webkit-box-shadow: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    font-family: 'Bree Serif', serif;
+}
+
+/*input {
+    outline: none;
+}*/
+
 #wrapper input:not([type="checkbox"]){
     width: 92%;
     margin-top: 4px;
     padding: 10px 5px 10px 32px;
     border: 1px solid rgb(178, 178, 178);
+    -webkit-appearance: textfield;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing : content-box;
     box-sizing : content-box;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
+    -webkit-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+    -moz-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
     box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
+#wrapper input:not([type="checkbox"]):active,
+#wrapper input:not([type="checkbox"]):focus{
+    border: 1px solid rgba(91, 90, 90, 0.7);
+    background: rgba(238, 236, 240, 0.2);
+    -webkit-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
+    -moz-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
+    box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
+}
+
 
 #wrapper p.button input{
     width: 30%;
     cursor: pointer;
     background: rgb(61, 157, 179);
     padding: 8px 5px;
-    font-family: 'BebasNeueRegular','Arial Narrow',Arial,sans-serif;
+    font-family: 'Bree Serif', serif;
     color: #fff;
     font-size: 24px;
     border: 1px solid rgb(28, 108, 122);
     margin-bottom: 10px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
-    box-shadow:
-            0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
-            0px 0px 0px 3px rgb(254, 254, 254),
-            0px 5px 3px 3px rgb(210, 210, 210);
+    -webkit-box-shadow: 0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
+    0px 0px 0px 3px rgb(254, 254, 254),
+    0px 5px 3px 3px rgb(210, 210, 210);
+    -moz-box-shadow:0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
+    0px 0px 0px 3px rgb(254, 254, 254),
+    0px 5px 3px 3px rgb(210, 210, 210);
+    box-shadow:0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
+    0px 0px 0px 3px rgb(254, 254, 254),
+    0px 5px 3px 3px rgb(210, 210, 210);
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
 #wrapper p.button input:hover{
@@ -120,7 +191,7 @@ input {
     border: 1px solid rgb(12, 76, 87);
     box-shadow: 0px 1px 6px 4px rgba(0, 0, 0, 0.2) inset;
 }
-p.signin.button{
+p.signup button{
     text-align: right;
     margin: 5px 0;
 }
@@ -129,13 +200,36 @@ p.change_link{
     color: rgb(127, 124, 124);
     left: 0px;
     height: 20px;
-    width: 447px;
-    padding: 17px 30px 20px 30px;
+    width: 492px;
+    padding: 17px 30px 30px 30px;
     font-size: 16px	;
     text-align: right;
     border-top: 1px solid rgb(219, 229, 232);
+    -webkit-border-radius: 0 0  5px 5px;
+    -moz-border-radius: 0 0  5px 5px;
     border-radius: 0 0  5px 5px;
     background: rgb(225, 234, 235);
+    background: -moz-repeating-linear-gradient(-45deg,
+    rgb(247, 247, 247) ,
+    rgb(247, 247, 247) 15px,
+    rgb(225, 234, 235) 15px,
+    rgb(225, 234, 235) 30px,
+    rgb(247, 247, 247) 30px
+    );
+    background: -webkit-repeating-linear-gradient(-45deg,
+    rgb(247, 247, 247) ,
+    rgb(247, 247, 247) 15px,
+    rgb(225, 234, 235) 15px,
+    rgb(225, 234, 235) 30px,
+    rgb(247, 247, 247) 30px
+    );
+    background: -o-repeating-linear-gradient(-45deg,
+    rgb(247, 247, 247) ,
+    rgb(247, 247, 247) 15px,
+    rgb(225, 234, 235) 15px,
+    rgb(225, 234, 235) 30px,
+    rgb(247, 247, 247) 30px
+    );
     background: repeating-linear-gradient(-45deg,
     rgb(247, 247, 247) ,
     rgb(247, 247, 247) 15px,
@@ -152,8 +246,14 @@ p.change_link{
     color: rgb(29, 162, 193);
     margin-left: 10px;
     text-decoration: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid rgb(203, 213, 214);
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s  linear;
+    -o-transition: all 0.4s linear;
+    -ms-transition: all 0.4s  linear;
     transition: all 0.4s  linear;
 }
 #wrapper p.change_link a:hover {
