--- a/client/src/app/movies/movies-detail.component.css
+++ b/client/src/app/movies/movies-detail.component.css
@@ -35,6 +35,7 @@ h1{
   height: 100%;
   max-width: 1000px;
   margin: 0 auto 1% auto;
+  background-color: beige;
   padding-top: 40px;
   color: black;
 }
